add darkgray color to position symbol

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 },
                 properties: {
                     'title': 'Estoy acá!',
-                    'marker-color': '#ff8888',
+                    'marker-color': '#272822',
                     'marker-symbol': 'star'
                 }
             });
