marker size to small

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 },
                 properties: {
                     'title': 'Acá',
-                    'marker-color': '#272822'
+                    'marker-color': '#272822',
+                    'marker-size': 'small'
                 }
             });
 
